--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicons/favicon-16x16.png">
     <link rel="icon" type="ico"href="./images/favicons/favicon.ico">
-    <link rel="manifest" href="/site.webmanifest">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -166,7 +165,7 @@
                         0 0 0 30 -10
                         "/>
                     </filter>
-                    <path style="display:block;" id="numero" d="M76.3,29.6H65.1V15h28.5v68H76.3V29.6z"></path>
+                    <path style="display:block;" id="numero" d="M60.3,69.4c6.2-5.1,12.2-10.3,18.3-15.4c7.2-6,11.8-10.1,11.8-17.4c0-5.4-3.1-7.6-7.3-7.6c-6,0-6.9,5.8-7,10.7H59.6 c0.2-4.4,0.4-10,4-15.6c5.8-9,16-10.4,20.9-10.4c15.2,0,23.1,10.1,23.1,21c0,8.3-2.5,14.2-11.2,22.2c-4.1,3.8-8.3,7.5-12.5,11.4 h24.2v14.6H60.3V69.4z"></path>
                 </svg>
               </div>
               <span class="menu__counter-total">/3</span>
@@ -258,7 +257,7 @@
                         0 0 0 30 -10
                         "/>
                     </filter>
-                    <path style="display:block;" id="numero-3" d="M60.3,69.4c6.2-5.1,12.2-10.3,18.3-15.4c7.2-6,11.8-10.1,11.8-17.4c0-5.4-3.1-7.6-7.3-7.6c-6,0-6.9,5.8-7,10.7H59.6 c0.2-4.4,0.4-10,4-15.6c5.8-9,16-10.4,20.9-10.4c15.2,0,23.1,10.1,23.1,21c0,8.3-2.5,14.2-11.2,22.2c-4.1,3.8-8.3,7.5-12.5,11.4 h24.2v14.6H60.3V69.4z"></path>
+                    <path style="display:block;" id="numero3" d="M60.5,34.8c0.2-8.2,3.7-13.4,8.3-16.6c4.6-3.3,10.4-4.5,15-4.5c13.2,0,21.3,9,21.3,18.5c0,9.4-6.5,12.9-9,14.2 c12.8,4.3,12.8,14.1,12.8,16.4c0,11.8-11.5,21.3-25.2,21.3c-7.9,0-16.8-3-21.2-9.5c-3-4.4-3.5-9.5-3.8-12h17.5 c0.4,1.6,1.6,6.2,7.8,6.3c5.1,0,7.4-3.3,7.4-7.6c0-6.4-6.6-6.9-9.1-6.9h-6.2V41.7h2.9c1.6,0,8.5,0,8.5-6.8c0-2.9-1.4-6-4.8-6 c-5.1,0-5.2,4.2-5.3,5.9H60.5z"></path>
                 </svg>
             </div>
             <span class="menu__counter-total">/3</span>
