--- a/index.html
+++ b/index.html
@@ -127,17 +127,17 @@
                     <div class="profile__info">
                         <p>Hola! mi nombre es Agustin. Mi interes en el desarrollo web comenzo en 2019 cuando necesitaba una pagina web para mi emprendimiento,   he buscado en todas las plataformas ecommerce y ninguna cumplia con lo que yo necesitaba, entonces decidi crear una desde 0 en wordpress y todo fue perfecto.</p>
                         <p>Avance y cada vez tenia mas curiosidad por cambiar mas cosas a mi manera y fue cuando decidi aprender HTML y CSS, pero eso no fue suciente y segui avanzando. Actualmente estoy finalizando la carrera FullStack de CoderHouse y preparandome como desarrollador FrontEnd.</p>
-                        <p>Estas son las tecnologias que manejo actualmente:</p>
+                        <p>Aca puedes ver los lenguajes y frameworks que manejo:</p>
                         <div class="profile__tec">
                             <ul>
-                                <li><i class="fas fa-caret-right"></i>JavaScript</li>
-                                <li><i class="fas fa-caret-right"></i>JavaScript</li>
-                                <li><i class="fas fa-caret-right"></i>JavaScript</li>
+                                <li><i class="fas fa-caret-right"></i>HTML & CSS</li>
+                                <li><i class="fas fa-caret-right"></i>SASS && Bootstrap</li>
+                                <li><i class="fas fa-caret-right"></i>Git</li>
                             </ul>
                             <ul>
                                 <li><i class="fas fa-caret-right"></i>JavaScript</li>
-                                <li><i class="fas fa-caret-right"></i>JavaScript</li>
-                                <li><i class="fas fa-caret-right"></i>JavaScript</li>
+                                <li><i class="fas fa-caret-right"></i>ReactJS</li>
+                                <li><i class="fas fa-caret-right"></i>Wordpress</li>
                             </ul>
                         </div>
                     </div>
