header blur & link home

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
   </head>
   <body class="page-loader">
     <header>
-      <a href="#" class="home-logo charging"
+      <div class="header-blur"></div>
+      <a href="https://agustinleg.github.io/" class="home-logo charging"
         ><svg
           xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 127.7 227.58"
