--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <span class="welcome__top color__tag target" data-delay="2">Bienvenid@, yo soy</span>
                 <h1 class="name target" data-delay="1">Agustin Leguizamon.</h1>
                 <h2 class="work target" data-delay="1">Frontend Developer.</h2>
-                <p class="introduction target" data-delay="1">Inicie en este mundo de la programacion en el 2019 como autodidacta. Actualmente terminando la carrera de fullstack en <a href="https://www.coderhouse.com" target="_blank" rel="noopener noreferrer" aria-label="Coderhouse" class="color__tag hover-underline">Coderhouse</a>.
+                <p class="introduction target" data-delay="1">Inicie en este mundo de la programación en el 2020 como autodidacta. Actualmente me encuentro cursando la carrera de fullstack en <a href="https://www.coderhouse.com" target="_blank" rel="noopener noreferrer" aria-label="Coderhouse" class="color__tag hover-underline">Coderhouse</a>.
                 </p>
             </div>
         </section>
@@ -126,9 +126,9 @@
             <div class="container">
                 <div class="profile__content bg-gray target__up">
                     <div class="profile__info">
-                        <p>Hola! mi nombre es Agustin. Mi interes en el desarrollo web comenzo en 2019 cuando necesitaba una pagina web para mi emprendimiento,   he buscado en todas las plataformas ecommerce y ninguna cumplia con lo que yo necesitaba, entonces decidi crear una desde 0 en wordpress y todo fue perfecto.</p>
-                        <p>Avance y cada vez tenia mas curiosidad por cambiar mas cosas a mi manera y fue cuando decidi aprender HTML y CSS, pero eso no fue suciente y segui avanzando. Actualmente estoy finalizando la carrera FullStack de CoderHouse y preparandome como desarrollador FrontEnd.</p>
-                        <p>Aca puedes ver los lenguajes y frameworks que manejo:</p>
+                        <p>Hola! mi nombre es Agustin. Mi interés en el desarrollo web comenzó en 2020 cuando necesitaba una página web para mi emprendimiento,   he buscado en todas las plataformas ecommerce y ninguna cumplía con lo que yo necesitaba, entonces decidí crear una desde 0 en wordpress y todo fue perfecto.</p>
+                        <p>Avance y cada vez tenía más curiosidad por cambiar más cosas a mi manera y fue cuando decidí aprender HTML y CSS, pero eso no fue suficiente y seguí avanzando. Actualmente estoy finalizando la carrera FullStack de CoderHouse y preparándome como desarrollador FrontEnd.</p>
+                        <p> Acá puedes ver los lenguajes y frameworks que manejo:</p>
                         <div class="profile__tec">
                             <ul>
                                 <li><i class="fas fa-caret-right"></i>HTML & CSS</li>
@@ -144,6 +144,7 @@
                     </div>
                     <div class="profile__img">
                         <img src="images/yo.jpg" alt="">
+                        <a class="resume-button" href="/resume.pdf" target="_blank" rel="noopener noreferrer">Resume</a>
                     </div>
                 </div>
             </div>
@@ -151,7 +152,7 @@
         <section id="proyectos">
           <div class="menu__counter-number">
             <div class="menu__counter-title">
-              <span>Algunas cosas que construi</span>
+              <span>Algunos proyectos</span>
             </div>
             <div class="menu__svg">
                 <svg class="menu__counter-number-svg" version="1.1" id="Layer_1_copy_8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 112 100" style="enable-background:new 0 0 112 100;" xml:space="preserve" fill="white">
@@ -210,6 +211,7 @@
                       <div class="technologies">
                           <ul>
                               <li>HTML & CSS</li>
+                              <li>Sass & Bootstrap</li>
                               <li>JavaScript</li>
                               <li>JQuery</li>
                           </ul>
@@ -243,7 +245,7 @@
         <section id="contacto">
           <div class="menu__counter-number">
             <div class="menu__counter-title">
-              <span>Y finalmente..</span>
+              <span>Y por último...</span>
             </div>
             <div class="menu__svg">
                 <svg class="menu__counter-number-svg" version="1.1" id="Layer_1_copy_8" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 112 100" style="enable-background:new 0 0 112 100;" xml:space="preserve" fill="white">
@@ -266,7 +268,7 @@
             <div class="container">
               <div class="contacto__container bg-gray target__up">
                 <h4 class="title">Ponte en contacto</h4>
-                <p class="text">Actualmente me gustaria empezar mi carrera profesional asi que si estas interesado seria un placer que hablemos</p>
+                <p class="text">Actualmente me gustaría empezar mi carrera profesional así que si estas interesado seria un placer que hablemos</p>
                 <button class="btn"><a href="mailto:agustin.leg7@gmail.com" target="_blank" rel="noopener noreferrer" aria-label="Email">Hola <i class="far fa-smile-beam"></i></a></button>
               </div>
             </div>
