--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
     <link
       rel="apple-touch-icon"
-      sizes="144x144"
+      sizes="144x144"z
       href="images/favicons/apple-icon-144x144.png"
     />
     <link
