--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="57x57" href="images/favicons/apple-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="images/favicons/apple-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="images/favicons/apple-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="images/favicons/apple-icon-76x76.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="images/favicons/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="images/favicons/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="images/favicons/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="images/favicons/apple-icon-76x76.png"
+    />
     <link
       rel="apple-touch-icon"
       sizes="114x114"
@@ -20,7 +36,8 @@
     />
     <link
       rel="apple-touch-icon"
-      sizes="144x144"z
+      sizes="144x144"
+      z
       href="images/favicons/apple-icon-144x144.png"
     />
     <link
@@ -39,12 +56,30 @@
       sizes="192x192"
       href="images/favicons/android-icon-192x192.png"
     />
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="96x96" href="images/favicons/favicon-96x96.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="images/favicons/favicon-16x16.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="images/favicons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="images/favicons/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="images/favicons/favicon-16x16.png"
+    />
     <link rel="manifest" href="images/favicons/manifest.json" />
     <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta name="msapplication-TileImage" content="images/favicons/ms-icon-144x144.png" />
+    <meta
+      name="msapplication-TileImage"
+      content="images/favicons/ms-icon-144x144.png"
+    />
     <meta name="theme-color" content="#161616" />
     <link rel="icon" type="ico" href="images/favicons/favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -65,55 +100,61 @@
   </head>
   <body class="page-loader">
     <header>
-      <a href="https://agustinleg.github.io/" class="logo"
-        ><img src="images/logo.svg" alt="Agustin Leguizamon Logo"
-      /></a>
+      <button class="btn">
+        <a href="/resume.pdf" target="_blank" rel="noopener noreferrer"
+          >Resume</a
+        >
+      </button>
+      <div class="social__container">
+        <ul class="social__list reset__list">
+          <li class="social__item">
+            <a
+              href="https://github.com/AgustinLeg"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="GitHub"
+              class="hover-color"
+              ><i class="fab fa-github"></i
+            ></a>
+          </li>
+          <li class="social__item">
+            <a
+              href="https://www.linkedin.com/in/agustin-leguizamon-359b69208/"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Linkdin"
+              class="hover-color"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+          </li>
+          <li class="social__item">
+            <a
+              href="mailto:agustin.leg7@gmail.com"
+              target="_blank"
+              rel="noopener noreferrer"
+              aria-label="Email"
+              class="hover-color"
+              ><i class="fas fa-envelope"></i
+            ></a>
+          </li>
+        </ul>
+      </div>
       <nav class="nav-main">
         <div class="nav-main__wrap">
           <div class="nav-mobile__name">
             <h2>Agustin Leguizamon</h2>
           </div>
+          
           <div class="nav-main__content">
             <ul class="nav-main__list reset__list">
-              <li class="nav-main__item hover-underline">
+              <li class="nav-main__item">
                 <a href="#sobre-mi"> Sobre mi </a>
               </li>
-              <li class="nav-main__item hover-underline">
+              <li class="nav-main__item">
                 <a href="#proyectos">Proyectos</a>
               </li>
-              <li class="nav-main__item hover-underline">
+              <li class="nav-main__item">
                 <a href="#contacto">Contacto</a>
-              </li>
-            </ul>
-          </div>
-          <div class="social__container">
-            <ul class="social__list reset__list">
-              <li class="social__item">
-                <a
-                  href="https://github.com/AgustinLeg"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="GitHub"
-                  ><i class="fab fa-github"></i
-                ></a>
-              </li>
-              <li class="social__item">
-                <a
-                  href="https://www.linkedin.com/in/agustin-leguizamon-359b69208/"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="Linkdin"
-                  ><i class="fab fa-linkedin"></i
-                ></a>
-              </li>
-              <li class="social__item">
-                <a
-                  href="mailto:agustin.leg7@gmail.com"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  aria-label="Email"
-                  ><i class="fas fa-envelope"></i
-                ></a>
               </li>
             </ul>
           </div>
@@ -155,11 +196,6 @@
               >Coderhouse</a
             >.
           </p>
-          <button class="btn">
-            <a href="/resume.pdf" target="_blank" rel="noopener noreferrer"
-              >Resume</a
-            >
-          </button>
         </div>
       </section>
       <section id="sobre-mi">
@@ -197,12 +233,10 @@
         </div>
       </section>
       <section id="proyectos">
-        <div class="container">
-          <div class="title__container">
-            <h3 class="title">Mis <span>Proyectos</span></h3>
-          </div>
-          <div class="card__container bg-gray"></div>
+        <div class="title__container">
+          <h3 class="title">Mis <span>Proyectos</span></h3>
         </div>
+        <div class="card__container bg-gray"></div>
       </section>
       <section id="contacto">
         <div class="container">
@@ -220,8 +254,8 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Email"
-                >Hola <i class="far fa-smile-beam"></i
-              ></a>
+                >Enviar mensaje! </a>
+                <span class="btn__hover-text">Hola<i class="fas fa-smile-wink"></i></span>
             </button>
           </div>
         </div>
