update design and proyects

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <div class="nav-mobile__name">
             <h2>Agustin Leguizamon</h2>
           </div>
-          
+
           <div class="nav-main__content">
             <ul class="nav-main__list reset__list">
               <li class="nav-main__item">
@@ -199,35 +199,47 @@
         </div>
       </section>
       <section id="sobre-mi">
-        <div class="container">
-          <div class="title__container">
-            <h3 class="title">Sobre <span>Mi</span></h3>
+        <div class="title__container">
+          <h3 class="title">Sobre <span>Mi</span></h3>
+        </div>
+        <div class="profile__content bg-gray target__up">
+          <div class="profile__info">
+            <p>
+              Hola! Toda esta locura inicio cuando necesitaba una página web
+              para mi
+              <a
+                href="https://bbfotografia.com/"
+                class="color__tag hover-underline"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Emprendimiento</a
+              >, he buscado en todas las plataformas ecommerce y ninguna cumplía
+              con lo que yo necesitaba, entonces decidí crear una desde 0 en
+              wordpress y todo fue perfecto.
+            </p>
+            <p>
+              Avance y cada vez tenía más curiosidad por cambiar más cosas a mi
+              manera y fue cuando decidí aprender HTML y CSS, pero eso no fue
+              suficiente y seguí avanzando. Actualmente estoy finalizando la
+              carrera FullStack de CoderHouse y preparándome como desarrollador
+              FrontEnd.
+            </p>
           </div>
-          <div class="profile__content bg-gray target__up">
-            <div class="profile__info">
-              <p>
-                Hola! Toda esta locura inicio cuando necesitaba una página web
-                para mi
-                <a
-                  href="https://bbfotografia.com/"
-                  class="color__tag hover-underline"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Emprendimiento</a
-                >, he buscado en todas las plataformas ecommerce y ninguna
-                cumplía con lo que yo necesitaba, entonces decidí crear una
-                desde 0 en wordpress y todo fue perfecto.
-              </p>
-              <p>
-                Avance y cada vez tenía más curiosidad por cambiar más cosas a
-                mi manera y fue cuando decidí aprender HTML y CSS, pero eso no
-                fue suficiente y seguí avanzando. Actualmente estoy finalizando
-                la carrera FullStack de CoderHouse y preparándome como
-                desarrollador FrontEnd.
-              </p>
-            </div>
-            <div class="profile__img">
-              <img src="images/yo.jpg" alt="" />
+          <div class="profile__img">
+            <img src="images/yo.jpg" alt="" />
+          </div>
+          <div class="skills">
+            <h4 class="title">Skills</h4>
+            <div class="skills-list">
+              <span >HTML & SASS</span>
+              <span >Bootstrap</span>
+              <span >Tailwind CSS</span>
+              <span >Git</span>
+              <span >ReactJS</span>
+              <span >Redux</span>
+              <span >JQuery</span>
+              <span >JavaScript (ES6+)</span>
+              <span >WordPress</span>
             </div>
           </div>
         </div>
@@ -254,8 +266,11 @@
                 target="_blank"
                 rel="noopener noreferrer"
                 aria-label="Email"
-                >Enviar mensaje! </a>
-                <span class="btn__hover-text">Hola<i class="fas fa-smile-wink"></i></span>
+                >Enviar mensaje!
+              </a>
+              <span class="btn__hover-text"
+                >Hola<i class="fas fa-smile-wink"></i
+              ></span>
             </button>
           </div>
         </div>
