--- a/index.html
+++ b/index.html
@@ -95,19 +95,20 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css" />
     <title>Agustin Leguizamon</title>
   </head>
   <body class="page-loader">
     <header>
-      <button class="btn">
+      <button class="btn" data-aos="fade-down" data-aos-delay="300" data-aos-duration="750">
         <a href="/resume.pdf" target="_blank" rel="noopener noreferrer"
           >Resume</a
         >
       </button>
       <div class="social__container">
         <ul class="social__list reset__list">
-          <li class="social__item">
+          <li class="social__item" data-aos="fade-down" data-aos-delay="450" data-aos-duration="750">
             <a
               href="https://github.com/AgustinLeg"
               target="_blank"
@@ -117,7 +118,7 @@
               ><i class="fab fa-github"></i
             ></a>
           </li>
-          <li class="social__item">
+          <li class="social__item" data-aos="fade-down" data-aos-delay="500" data-aos-duration="750">
             <a
               href="https://www.linkedin.com/in/agustin-leguizamon-359b69208/"
               target="_blank"
@@ -127,7 +128,7 @@
               ><i class="fab fa-linkedin"></i
             ></a>
           </li>
-          <li class="social__item">
+          <li class="social__item" data-aos="fade-down" data-aos-delay="550" data-aos-duration="750">
             <a
               href="mailto:agustin.leg7@gmail.com"
               target="_blank"
@@ -160,7 +161,7 @@
           </div>
         </div>
       </nav>
-      <button class="toggle-nav target" data-delay="1">
+      <button class="toggle-nav target" data-aos="fade-down" data-aos-delay="300" data-aos-duration="750">
         <div class="menu normal">
           <div class="menu__burger">
             <span class="line"></span>
@@ -181,9 +182,9 @@
     <main>
       <section id="welcome">
         <div class="welcome__container">
-          <h1 class="name target" data-delay="1">Agustin Leguizamon.</h1>
-          <h2 class="work target" data-delay="1">Frontend Developer.</h2>
-          <p class="introduction target" data-delay="1">
+          <h1 class="name target" data-aos="fade-up" data-aos-duration="750">Agustin Leguizamon.</h1>
+          <h2 class="work target" data-aos="fade-up" data-aos-delay="300" data-aos-duration="750">Frontend Developer.</h2>
+          <p class="introduction target" data-aos="fade-up" data-aos-delay="500" data-aos-duration="750">
             Hola!, estoy en este mundo de la programación desde el 2020 como
             autodidacta. Actualmente me encuentro cursando la carrera de
             fullstack en
@@ -200,10 +201,10 @@
       </section>
       <section id="sobre-mi">
         <div class="title__container">
-          <h3 class="title">Sobre <span>Mi</span></h3>
+          <h3 class="title" data-aos="fade-up" data-aos-duration="750">Sobre <span>Mi</span></h3>
         </div>
         <div class="profile__content bg-gray target__up">
-          <div class="profile__info">
+          <div class="profile__info" data-aos="fade-up" data-aos-delay="500" data-aos-duration="750">
             <p>
               Hola! Toda esta locura inicio cuando necesitaba una página web
               para mi
@@ -225,37 +226,37 @@
               FrontEnd.
             </p>
           </div>
-          <div class="profile__img">
+          <div class="profile__img" data-aos="fade-up" data-aos-delay="300" data-aos-duration="750">
             <img src="images/yo.jpg" alt="" />
           </div>
-          <div class="skills">
-            <h4 class="title">Skills</h4>
-            <div class="skills-list">
-              <span >HTML & SASS</span>
-              <span >Bootstrap</span>
-              <span >Tailwind CSS</span>
-              <span >Git</span>
-              <span >ReactJS</span>
-              <span >Redux</span>
-              <span >JQuery</span>
-              <span >JavaScript (ES6+)</span>
-              <span >WordPress</span>
-            </div>
+        </div>
+        <div class="skills">
+          <h4 class="title" data-aos="fade-up">Skills</h4>
+          <div class="skills-list" data-aos="zoom-out-up">
+            <span >HTML & SASS</span>
+            <span >Bootstrap</span>
+            <span >Tailwind CSS</span>
+            <span >Git</span>
+            <span >ReactJS</span>
+            <span >Redux</span>
+            <span >JQuery</span>
+            <span >JavaScript (ES6+)</span>
+            <span >WordPress</span>
           </div>
         </div>
       </section>
       <section id="proyectos">
-        <div class="title__container">
+        <div class="title__container" data-aos="fade-up" data-aos-delay="500" data-aos-duration="750">
           <h3 class="title">Mis <span>Proyectos</span></h3>
         </div>
         <div class="card__container bg-gray"></div>
       </section>
       <section id="contacto">
         <div class="container">
-          <div class="title__container">
+          <div class="title__container" data-aos="fade-up" data-aos-delay="300" data-aos-duration="750">
             <h3 class="title">Contacto<span></span></h3>
           </div>
-          <div class="contacto__container bg-gray target__up">
+          <div class="contacto__container bg-gray"data-aos="fade-up" data-aos-delay="500" data-aos-duration="750">
             <p class="text">
               Actualmente me gustaría empezar mi carrera profesional así que si
               estas interesado seria un placer que hablemos
@@ -290,7 +291,7 @@
         <i class="fas fa-heart"></i>
       </p>
     </footer>
-    <script src="js/anime.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/app.js"></script>
   </body>
 </html>
